feat: add user role management with three-tier roles and registration approval
Implement USER/ADMIN/SUPER_ADMIN role model with account status workflow
(ACTIVE/PENDING/REJECTED/DISABLED). Super admin auto-initializes via
DataInitializer. Admin registration requires super admin approval.
Add admin endpoints for user list, ban/unban, and delete with role-based
access control. Frontend includes approval page and user management page.
Includes 27 new unit tests all passing.